--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -5,3 +5,10 @@ ja:
     attributes:
       comic:
         title: タイトル
+  views:
+    pagination:
+      first: <i class="fas fa-angle-double-left"></i>
+      last: <i class="fas fa-angle-double-right"></i>
+      previous: <i class="fas fa-angle-left"></i>
+      next: <i class="fas fa-angle-right"></i>
+      truncate: "..."
